# bsky-video-dl

./: Cargo.toml  README.md  build.sh  flake.nix
.github/workflows/: build.yml
src/: lib.rs  types.rs
web/: index.html  package.json
web/src/: main.ts  style.css  types.ts  vite-env.d.ts
web/src/components/: url-input.ts  video-downloader.ts
