[package]
name = "bsky-video-dl"
version = "0.1.0"
edition = "2024"
description = "wasm-based bluesky video downloader"
repository = "https://github.com/sillowww/bsky-video-dl"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.77"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.77"

[dependencies.reqwest]
version = "0.12.15"
features = ["json"]
default-features = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12.15", features = [
    "json",
    "rustls-tls",
], default-features = false }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12.15", features = ["json"], default-features = false }
